# genlang

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: benchmarks.py  building_blocks.py  convergence_comparison.py  elitism_effect.py  evolution_tree.py  fitness_histogram.py  function_gallery.py  gene_flow.py  genetic_diversity_radar.py  search_space_exploration.py  speciation.py  tree_depth_distribution.py
src/: ast.rs  dashboard.rs  ge.rs  genetic.rs  gep.rs  interpreter.rs  io.rs  island.rs  lib.rs  main.rs  pareto.rs  problems.rs  visualization.rs
