[package]
name = "genlang"
version = "0.2.0"
edition = "2021"
description = "Self-evolving programming language — programs mutate, crossover, and evolve to solve problems. Genetic Programming in pure Rust."
license = "MIT"
repository = "https://github.com/redbasecap-buiss/genlang"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
